Notes logic was implemented (21.03.26)