@@ -9,8 +9,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -24,19 +22,18 @@ public class CustomUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        Optional<User> user = userRepository.findByUsername(username);
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException("Пользователь не найден: " + username));
 
-        return user.map(u -> {
-            List<String> roleNames = u.getRoles().stream()
-                    .map(role -> role.getName())
-                    .collect(Collectors.toList());
+        List<String> roleNames = user.getRoles().stream()
+                .map(role -> role.getName())
+                .toList();
 
-            return new CustomUserDetails(
-                    u.getId(),
-                    u.getUsername(),
-                    u.getPassword(),
-                    roleNames
-            );
-        }).orElseThrow(() -> new UsernameNotFoundException(username));
+        return new CustomUserDetails(
+                user.getId(),
+                user.getUsername(),
+                user.getPassword(),
+                roleNames
+        );
     }
 }
